<PreferenceScreen  xmlns:android="http://schemas.android.com/apk/res/android">
   
	<PreferenceCategory
		android:title="@string/settings_category_screen"
		android:key="pref_category_screen">

       	<CheckBoxPreference
		    android:title="@string/settings_screen_always_on_title"
		    android:summary="@string/settings_screen_always_on_summary"
		    android:key="pref_screen_always_on"
		    android:defaultValue="true"/>

	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/settings_category_switches"
		android:key="pref_category_switches">
	        
		<CheckBoxPreference
		    android:title="@string/settings_slider_on_off"
		    android:summary="@string/settings_slider_on_off_summary"
		    android:key="pref_slider_on_off"
		    android:defaultValue="true"/>

		<CheckBoxPreference
		    android:title="@string/settings_slider_angle"
		    android:summary="@string/settings_slider_angle_summary"
		    android:key="pref_slider_angle"
		    android:defaultValue="true"/>

	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/settings_category_vibration"
		android:key="pref_category_vibration">
		
    	<CheckBoxPreference 
		    android:title="@string/settings_vibrate_title"
		    android:summary="@string/settings_vibrate_summary"
		    android:key="pref_vibrate"
		    android:defaultValue="true"/>
		
    	<CheckBoxPreference 
		    android:title="@string/settings_vibrate_keypad_more_title"
		    android:summary="@string/settings_vibrate_keypad_more_summary"
		    android:key="pref_vibrate_keypad_more"
		    android:defaultValue="false"
		    android:dependency="pref_vibrate"/>

	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/settings_category_border"
		android:key="pref_category_vibration">
    		
    	<CheckBoxPreference
		    android:title="@string/settings_border_black_buttons"
		    android:summary="@string/settings_border_black_buttons_summary"
		    android:key="pref_border_black_buttons"
		    android:defaultValue="true"/>

		<CheckBoxPreference
		    android:title="@string/settings_border_other_buttons"
		    android:summary="@string/settings_border_other_buttons_summary"
		    android:key="pref_border_other_buttons"
		    android:defaultValue="true"/>
		
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/settings_category_scaling"
		android:key="pref_category_scaling">
    		
       <ListPreference
	            android:key="pref_button_text_size"
	            android:title="@string/settings_scaling_buttons"
	            android:summary="@string/settings_scaling_buttons_summary"
	            android:defaultValue="1"
	            android:entries="@array/sizes"
	            android:entryValues="@array/sizesValues"/>
       
	   <ListPreference
	            android:key="pref_label_text_size"
	            android:title="@string/settings_scaling_labels"
	            android:summary="@string/settings_scaling_labels_summary"
	            android:defaultValue="1"
	            android:entries="@array/sizes"
	            android:entryValues="@array/sizesValues"/>
       
	</PreferenceCategory>
	   	
</PreferenceScreen>


<!-- 
        <ListPreference
	            android:key="pref_vibrate"
	            android:title="@string/settings_vibrate_title"
	            android:summary="@string/settings_vibrate_summary"
	            android:defaultValue="0"
	            android:entries="@array/updateInterval"
	            android:entryValues="@array/updateIntervalValues"
	            android:dependency="perform_updates"
	        />
-->  		
