<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_about"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_load"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/menu_load"/>
    <item
        android:id="@+id/menu_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/menu_save"/>
    <item
        android:id="@+id/menu_swap_model"
        android:icon="@android:drawable/ic_menu_always_landscape_portrait"
        android:title="@string/menu_swap"/>
    <item
        android:id="@+id/menu_import"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/menu_import"/>
    <item
        android:id="@+id/menu_export"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/menu_export"/>

</menu>